Added padding in activity_maps.xml *Increased fonts and changed button color plus spacing in activity_help.xml *Changed login buttons background color

--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -6,9 +6,9 @@
         />
     <gradient
         android:angle="0"
-        android:startColor="#ffffff"
-        android:centerColor="#ffffff"
-        android:endColor="#ffffff"
+        android:startColor="@color/lightBlue"
+        android:centerColor="@color/lightBlue"
+        android:endColor="@color/lightBlue"
         android:type="linear" />
     <padding
         android:left="0dp"
