--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/lightBlue"
     tools:context="com.chris.tatusafety.maps.MapsActivity">
 
 
@@ -12,17 +13,16 @@
 <android.support.design.widget.TextInputEditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/etOrigin"
-    android:nextFocusDown="@id/etDestination"
-    />
+    android:id="@+id/etOrigin"/>
+    <!--android:nextFocusDown="@id/etDestination"-->
+
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etDestination"
         android:hint="Where are you going"
-        android:inputType="textAutoComplete"
-        android:nextFocusDown="@id/btnFindPath"/>
+        android:inputType="textAutoComplete" />
 
 
     <LinearLayout
@@ -33,8 +33,8 @@
             android:id="@+id/btnFindPath"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:text="Find the way"
+            android:layout_marginBottom="10dp"
+            android:text="FIND THE WAY"
             android:padding="5dp"
             android:layout_marginLeft="10dp"
             android:background="@color/yellow"
@@ -60,7 +60,8 @@
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+        android:layout_marginTop="5dp"/>
 
 
 
