--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,27 +13,15 @@
 <android.support.design.widget.TextInputEditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-<<<<<<< HEAD
     android:id="@+id/etOrigin"/>
-    <!--android:nextFocusDown="@id/etDestination"-->
 
-=======
-    android:id="@+id/etOrigin"
-
-    />
->>>>>>> 3343981f61ad8e20dc649040948a5c516277a562
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etDestination"
-        android:hint="Where are you going"
-<<<<<<< HEAD
-        android:inputType="textAutoComplete" />
-=======
-        android:inputType="textAutoComplete"
-       />
->>>>>>> 3343981f61ad8e20dc649040948a5c516277a562
+        android:hint="Where are you going" />
+
 
 
     <LinearLayout
