--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -36,4 +36,5 @@
         android:padding="5dp"
         android:id="@+id/textView7"
         android:layout_alignParentTop="true"
-        android:layout_alignPa
+        android:layout_alignParentStart="true" />
+    </RelativeLayout>
