*Resolve error in build.gradle by setting miniSDk @ 15 and SdkVersion @ 25

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -35,6 +35,5 @@
         android:layout_marginTop="42dp"
         android:padding="5dp"
         android:id="@+id/textView7"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true" />
     </RelativeLayout>
