--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,10 +21,11 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:textSize="22sp"
     android:textAllCaps="true"
     android:textAlignment="center"
-    android:drawableTop="@drawable/logo_surf_connect"
+    android:drawableTop="@drawable/tatu_logos"
     android:drawablePadding="30dp"
-    android:layout_marginTop="90dp"
-    />
+    android:layout_alignBottom="@+id/email_login_button"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true" />
     <Button
         android:id="@+id/email_login_button"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
@@ -73,9 +74,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textAlignment="center"
         android:onClick="onAnonymousLogin"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="390dp"
+        android:layout_marginTop="15dp"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_width="270dp"
@@ -84,6 +83,9 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
-        android:shadowRadius="5"/>
+        android:shadowRadius="5"
+        android:layout_below="@+id/phone_login_button"
+        android:layout_alignLeft="@+id/phone_login_button"
+        android:layout_alignStart="@+id/phone_login_button" />
 
 </RelativeLayout>
