--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:showIn="@layout/activity_welcome"
-    android:background="@color/lightBlue">
+    tools:showIn="@layout/activity_welcome">
 
 
     <android.support.v4.view.ViewPager
