--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -57,12 +57,13 @@
         android:textStyle="italic" />
 
 
+
     <View
         android:id="@+id/seperator"
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
         android:background="#9EA3B0"
-        android:layout_below="@id/tweetTextView"/>
+       android:layout_below="@+id/tweetTextView"/>
         </RelativeLayout>
     </ScrollView>
 
