New report view fixes.

--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -27,9 +27,7 @@
         <TextView
             android:id="@+id/tvSpeedAuto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Your Current Speed(km/h) is: "/>
-
+            android:layout_height="match_parent" />
 
         <!--  Date Label -->
 
