this is now version 1.3.2 version code 4. fine tuned. Main activity now brings detailed reports. apk signed generates successfully . in find  me activity if gps off it takes user to settings . for android 6 and > the user can click to go directly to permisions and enable them so that they can find themselves and then stages activty is now a coming aoon activity

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/yellow"
     tools:context="com.chris.tatusafety.UI.AccountActivity">
 
     <ImageView
