--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,17 +23,15 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:textAlignment="center"
     android:drawableTop="@drawable/tatu_logos"
     android:drawablePadding="30dp"
-    android:layout_alignBottom="@+id/email_login_button"
+    android:layout_below="@+id/phone_login_button"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true" />
+    android:layout_alignParentStart="true"
+    android:layout_marginTop="88dp" />
     <Button
         android:id="@+id/email_login_button"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textAlignment="center"
         android:onClick="onEmailLogin"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="230dp"
         android:text="LOGIN WITH EMAIL"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -44,11 +42,14 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        />
+        android:layout_alignBaseline="@+id/title"
+        android:layout_alignBottom="@+id/title"
+        android:layout_alignLeft="@+id/anonymous_login_button"
+        android:layout_alignStart="@+id/anonymous_login_button" />
 
 <Button
     android:id="@+id/phone_login_button"
-    android:text="LOGIN WITH PHONE"
+    android:visibility="gone"
 
     android:textAlignment="center"
     android:onClick="onPhoneLogin"
@@ -74,7 +75,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textAlignment="center"
         android:onClick="onAnonymousLogin"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="61dp"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_width="270dp"
@@ -84,8 +85,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_below="@+id/phone_login_button"
-        android:layout_alignLeft="@+id/phone_login_button"
-        android:layout_alignStart="@+id/phone_login_button" />
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
