--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -84,11 +84,56 @@
         android:layout_below="@+id/tvRoad"
         android:layout_alignLeft="@+id/tvDate"
         android:layout_alignStart="@+id/tvDate" />
+    <TextView
+
+        android:id="@+id/tvPlate"
+
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+
+        android:paddingTop="10dip"
+        android:text="Number Plate"
+        android:textColor="#343434"
+        android:textSize="15dip"
+        android:layout_below="@+id/tvSacco"
+
+       />
+    <TextView
+
+        android:id="@+id/tvCounty"
+
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+
+        android:paddingTop="10dip"
+        android:text="Time"
+        android:textColor="#343434"
+        android:textSize="15dip"
+        android:layout_below="@+id/tvTime"
+        android:layout_alignLeft="@+id/tvDate" />
+    <TextView
+
+        android:id="@+id/tvDesc"
+
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+
+        android:paddingTop="10dip"
+        android:text="Description"
+        android:textColor="#343434"
+        android:textSize="15dip"
+        android:layout_below="@+id/tvPlate"
+        android:paddingBottom="10dp"
+        />
     <View
         android:id="@+id/seperator"
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/tvTime"
-        android:background="#000" />
+        android:layout_below="@+id/tvDesc"
+        android:background="#000"
+        />
 
 </RelativeLayout>
