error checkoing for form and fixed help me activity so that it navigates appropriately

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chris.tatusafety.UI.HistoryActivity">
+    tools:context="com.chris.tatusafety.UI.HistoryActivity"
+    android:background="@color/lightBlue">
 
     <ListView
         android:padding="5dp"
