figured out time stamp . tweets now show e.g one hour ago

--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/tweetUserTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="10dp"
@@ -57,16 +57,17 @@
         android:textStyle="italic" />
             <TextView
                 android:id="@+id/dateTime"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="50dp"
                 android:text="Date here"
                 android:textColor="#000"
                 android:textSize="14sp"
-                android:textStyle="italic"
-                android:layout_below="@+id/tweetTextView"
-                />
+                android:textStyle="bold"
+                android:layout_below="@+id/tweetUserText"
+                android:layout_toRightOf="@id/tweetUserTextView"
+                android:layout_marginTop="10dp"/>
 
 
 
@@ -75,7 +76,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
         android:background="#9EA3B0"
-       android:layout_below="@+id/dateTime"/>
+       android:layout_below="@+id/tweetTextView"/>
         </RelativeLayout>
     </ScrollView>
 
