--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:textAlignment="center"
     android:drawableTop="@drawable/tatu_logos"
     android:drawablePadding="30dp"
-    android:layout_marginTop="21dp"
+    android:layout_marginTop="51dp"
     android:layout_below="@+id/background"
     android:layout_toRightOf="@+id/background"
     android:layout_toEndOf="@+id/background" />
@@ -64,7 +64,8 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:shadowRadius="5"
     android:layout_below="@+id/email_login_button"
     android:layout_alignLeft="@+id/email_login_button"
-    android:layout_alignStart="@+id/email_login_button" />
+    android:layout_alignStart="@+id/email_login_button"
+    android:visibility="gone"/>
 
 
 
@@ -74,7 +75,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textAlignment="center"
         android:onClick="onAnonymousLogin"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="42dp"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_width="270dp"
