--- a/app/src/main/res/layout/activity_find_me.xml
+++ b/app/src/main/res/layout/activity_find_me.xml
@@ -163,7 +163,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.248"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tvSpeed"
@@ -180,7 +181,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.248"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/textView2"
