--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:title="Feedback"
+            android:title="Speedometer"
             android:id="@+id/nav_explore"
-            android:icon="@drawable/ic_mail_outline">
+            >
 
         </item>
         <item
